# digit_recognition

./: .gitignore  Cargo.toml  neural_network_1.json  neural_network_4.json
src/: data.rs  gui.rs  interactive_canvas_widget.rs  io_ext.rs  lib.rs  main.rs  network.rs  training.rs  training_data.rs
