[package]
name = "digit_recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
typed-io = "0.1.0"
thiserror = "1.0.31"
druid = "0.7.0"
args = "2.2.0"
anyhow = "1.0.60"
getopts = "0.2.21"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
rand = "0.8.5"
rand_distr = "0.4.3"